  * Cherry-pick https://reviews.llvm.org/D99501 to allow -flto=auto
  * Revert https://reviews.llvm.org/D95727 as it is causing some issues like:
    - /usr/bin/ld: ./build-llvm/lib/ExecutionEngine/Interpreter/./llvm/lib/ExecutionEngine/Interpreter/ExternalFunctions.cpp:135: undefined reference to `ffi_type_pointer'
    -  Host compiler must support std::atomic!

  [ John Paul Adrian Glaubitz ]
  * Add upstream patch D98574 to fix clang macro definitions on sparc64
  * Add upstream patch D98575 to fix 32-bit compiler-rt build on sparc64

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 02 Apr 2021 13:58:28 +0200

llvm-toolchain-snapshot (1:13~++20210129063721+010b176cdefb-1~exp2) experimental; urgency=medium

  * Enable OpenMP offload capabilities for NVDIA GPUs
    See https://bugzilla.redhat.com/show_bug.cgi?id=1922914

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 01 Feb 2021 09:04:16 +0100

llvm-toolchain-snapshot (1:13~++20210129063721+010b176cdefb-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * New branch (12 => 13)
  * Workaround a static_assert on https://bugs.llvm.org/show_bug.cgi?id=48259
    "static assertion failed: Recycler allocation size is less than object size!"
  * Also install usr/lib/llvm-12/bin/ld64.lld.darwinnew & usr/bin/ld64.lld.darwinnew-12
  * Also install usr/lib/llvm-12/lib/libomptarget.so.12 in libomp5-12

  [ Gianfranco Costamagna ]
  * Add upstream patch D92052 to fix a gcn offload compiler issue with gcc (Closes: #975692)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 30 Jan 2021 17:31:15 +0100

llvm-toolchain-snapshot (1:12~++20201105093023+cc2a2bb5ce5-1~exp1) experimental; urgency=medium

  * experimental New snapshot release
  * lld-use-link-atomic-i386.diff Try to workaround a linker error
    error: undefined reference to '__atomic_load'
    on sid i386
  * Bring back gold for ppc64el. Doko thinks it is fixed.

  [ John Paul Adrian Glaubitz ]
  * Limit maximum parallel link jobs to 4 on sparc and sparc64
