@@ -311,6 +311,12 @@ endif
 PROJECTS_LIST := $(shell echo "$(PROJECTS)"|sed -e "s| ||g")
 
 preconfigure:
+
+	if ! grep -qs '/proc ' /proc/mounts; then \
+		echo "/proc needs to be mounted"; \
+		exit 1; \
+	fi
+
 	@echo "DEB_HOST_MULTIARCH=$(DEB_HOST_MULTIARCH)"
 	@echo "DEB_HOST_GNU_TYPE=$(DEB_HOST_GNU_TYPE)"
 	@echo "DEB_HOST_ARCH_BITS=$(DEB_HOST_ARCH_BITS)"
